--- a/GiveMeStatisticsVolleyball/MainWindow.xaml
+++ b/GiveMeStatisticsVolleyball/MainWindow.xaml
@@ -27,13 +27,14 @@
                 <RowDefinition Height="1*"/>
 
             </Grid.RowDefinitions>
+            
             <Button x:Name="btnPlayer4" Grid.Column="0" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer4_Click" >4</Button>
             <Button x:Name="btnPlayer3" Grid.Column="1" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer3_Click" >3</Button>
             <Button x:Name="btnPlayer2" Grid.Column="2" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer2_Click" >2</Button>
             <Button x:Name="btnPlayer5" Grid.Column="0" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer5_Click" >5</Button>
             <Button x:Name="btnPlayer6" Grid.Column="1" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer6_Click" >6</Button>
             <Button x:Name="btnPlayer1" Grid.Column="2" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer1_Click" >1</Button>
-
+            
             <TextBox Grid.Row="0" Grid.ColumnSpan="3" Margin="0,30"></TextBox>
             <TextBox Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10" VerticalAlignment="Top"></TextBox>
 
@@ -51,8 +52,8 @@
         <Button x:Name="btnMade"  Grid.Column="3" Grid.Row="3" Background="LightSkyBlue" Margin="10" FontSize="30" Click="btnMade_Click" >MADE</Button>
         <Button x:Name="btnPoint"  Grid.Column="3" Grid.Row="4" Background="SpringGreen" Margin="10" FontSize="30" Click="btnPoint_Click" >POINT</Button>
 
-        <TextBox x:Name="textOutput" Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="4" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center" Width="900" Height="100"></TextBox>
-
+        <TextBox x:Name="textOutput" Grid.Column="0" Grid.Row="7" FontSize="25" VerticalAlignment="Center" HorizontalAlignment="Center" Width="600" Height="100"></TextBox>
+        <Button x:Name="btnReport" Grid.Column="3" Grid.Row="7" Width="100px" Height="100px" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="btnReport_Click"> Report</Button>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
