--- a/GiveMeStatisticsVolleyball/MainWindow.xaml
+++ b/GiveMeStatisticsVolleyball/MainWindow.xaml
@@ -27,13 +27,25 @@
                 <RowDefinition Height="1*"/>
 
             </Grid.RowDefinitions>
-            
-            <Button x:Name="btnPlayer4" Grid.Column="0" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer4_Click" >4</Button>
-            <Button x:Name="btnPlayer3" Grid.Column="1" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer3_Click" >3</Button>
-            <Button x:Name="btnPlayer2" Grid.Column="2" Grid.Row="1" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer2_Click" >2</Button>
-            <Button x:Name="btnPlayer5" Grid.Column="0" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer5_Click" >5</Button>
-            <Button x:Name="btnPlayer6" Grid.Column="1" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer6_Click" >6</Button>
-            <Button x:Name="btnPlayer1" Grid.Column="2" Grid.Row="3" Margin="40" Background="DarkTurquoise" FontSize="30" Height="80" Width="80" Click="btnPlayer1_Click" >1</Button>
+
+            <Button x:Name="btnPlayer4" Grid.Column="0" Grid.Row="1" Background="Transparent" BorderThickness="0"  Height="100" Width="100"  Click="btnPlayer4_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\4.png" />
+            </Button>
+            <Button x:Name="btnPlayer3" Grid.Column="1" Grid.Row="1" Background="Transparent" BorderThickness="0"  Height="100" Width="100"  Click="btnPlayer3_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\3.png" />
+            </Button>
+            <Button x:Name="btnPlayer2" Grid.Column="2" Grid.Row="1" Background="Transparent" BorderThickness="0"  Height="100" Width="100"  Click="btnPlayer2_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\2.png" />
+            </Button>
+            <Button x:Name="btnPlayer5" Grid.Column="0" Grid.Row="3" Background="Transparent" BorderThickness="0"  Height="100" Width="100"  Click="btnPlayer5_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\5.png" />
+            </Button>
+            <Button x:Name="btnPlayer6" Grid.Column="1" Grid.Row="3" Background="Transparent" BorderThickness="0"  Height="100" Width="100" Click="btnPlayer6_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\6.png" />
+            </Button>
+            <Button x:Name="btnPlayer1" Grid.Column="2" Grid.Row="3" Background="Transparent" BorderThickness="0"  Height="100" Width="100" Click="btnPlayer1_Click" >
+                <Image Source="D:\zz\GITHUB\GiveMeStatisticsVolleyball\GiveMeStatisticsVolleyball\img\1.png" />
+            </Button>
             
             <TextBox Grid.Row="0" Grid.ColumnSpan="3" Margin="0,30"></TextBox>
             <TextBox Grid.Row="2" Grid.ColumnSpan="3" Margin="0,10" VerticalAlignment="Top"></TextBox>
